@startuml
abstract class "Food" {
 -name: String
 -baseToppings: List<Ingredients>
 -selectedExtraToppings: List<Ingredients>
 -basePrice: int

 +getName(): String
 +setName(name: String): void
 +getBaseToppings(): List<Ingredients>
 +setBaseToppings(toppings: List<Ingredients>): void
 +getBasePrice(): int
 +setBasePrice(price: int): void
 +calculateFinalPrice(): int
 +containsAllergens(user: User): boolean
 +{static} filterMenu(user: User): List<Food>

}
class Pizza{
...
}
Food <|-- Pizza

class Ingredient {
-name: String
-price: int

+getPrice():int
+setPrice(price: int)
+getName(): String
+setName(name: String): void
}
Food *-- Ingredient
interface IngredientRepository
interface FoodRepository
Food o--FoodRepository
Ingredient o-- IngredientRepository

interface "Coupon"{
 -id: int
 -validationCode: String
 -validUntil: Date

 +getId(): int
 +setId(id: int): void
 +getValidationCode(): String
 +setValidationCode(code: String): void
 +getValidUntil(): Date
 +setValidUntil(date: Date): void
 +validate(): boolean
 +calculateDiscount(): double
}

class RegularDiscountCoupon {
...
}
class BuyOneGetOneFree{
...
}
Coupon <|-- RegularDiscountCoupon
Coupon <|-- BuyOneGetOneFree

interface CouponRepository

Coupon o-- CouponRepository
@enduml